--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
+
   <body>
 
     <header id="home" class="home vh-100">
@@ -133,8 +134,10 @@
                   </div>
                 </div>
               </div>
-              <a class="about-btn about-btn-download mb-lg-4" href="#">Download CV</a>
-              <a class="about-btn about-btn-contact mt-lg-4" href="#">Contact Me</a>
+              <div class="d-flex">
+                <div class="me-3"><a class="about-btn about-btn-download mb-lg-4" href="#">Download CV</a></div>
+                <div><a class="about-btn about-btn-contact  mt-lg-4" href="#">Contact Me</a></div>
+              </div>
             </div>
           </div>
         </div>
@@ -211,12 +214,12 @@
         <div class="center-in-middle">
           <h3 class="mb-0 text-center bg-dots">Portfolio.</h3>
         </div>
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+        <div id="portfolio-carousel" class="carousel slide" data-bs-ride="true">
           <div class="position-static text-center my-5">
-            <a type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" aria-label="Slide 1" class="fw-bold mx-3 active" aria-current="true">ALL</a>
-            <a type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2" class="fw-bold mx-3">Brand</a>
-            <a type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3" class="fw-bold mx-3">Design</a>
-            <a type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4" class="fw-bold mx-3">Graphic</a>
+            <a type="button" data-bs-target="#portfolio-carousel" data-bs-slide-to="0" aria-label="Slide 1" class="fw-bold mx-3 active" aria-current="true">ALL</a>
+            <a type="button" data-bs-target="#portfolio-carousel" data-bs-slide-to="1" aria-label="Slide 2" class="fw-bold mx-3">Brand</a>
+            <a type="button" data-bs-target="#portfolio-carousel" data-bs-slide-to="2" aria-label="Slide 3" class="fw-bold mx-3">Design</a>
+            <a type="button" data-bs-target="#portfolio-carousel" data-bs-slide-to="3" aria-label="Slide 4" class="fw-bold mx-3">Graphic</a>
           </div>
           <div class="carousel-inner">
 
@@ -579,7 +582,7 @@
           <h3 class="mb-0 text-center bg-dots">Testimonials.</h3>
         </div>
 
-        <div id="carouselExampleIndicators" class="carousel slide position-static" data-bs-ride="true">
+        <div id="testimonial-carousel" class="carousel slide position-static" data-bs-ride="true">
           <div class="carousel-inner position-static my-3">
             <div class="carousel-item active">
               <div class="text-center">
@@ -614,9 +617,9 @@
           </div>
 
           <div class="carousel-indicators position-static mt-5">
-            <a type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></a>
-            <a type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></a>
-            <a type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></a>
+            <a type="button" data-bs-target="#testimonial-carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></a>
+            <a type="button" data-bs-target="#testimonial-carousel" data-bs-slide-to="1" aria-label="Slide 2"></a>
+            <a type="button" data-bs-target="#testimonial-carousel" data-bs-slide-to="2" aria-label="Slide 3"></a>
           </div>
 
         </div>
